--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -18,3 +18,5 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: run tests
       run: docker-compose run test
+    - name: run pylint
+      run: docker-compose run test pylint tardis/apps/mydata
