--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -20,3 +20,8 @@ jobs:
       run: docker-compose run test
     - name: run pylint
       run: docker-compose run test pylint tardis/apps/mydata
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1.0.5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: false
