--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -17,6 +17,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: run tests
-      run: docker-compose run test
+      run: docker-compose run -e CODECOV_TOKEN test
     - name: run pylint
       run: docker-compose run test pylint tardis/apps/mydata
